--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="FreightFi - Close your books fast, Get paid even faster" />
     <meta property="og:description" content="FreightFi automates the entire financial loop in logistics helping fleets and brokers accelerate cash flow, recover loss revenue, and unlock capital when they need it most." />
-    <meta property="og:image" content="%PUBLIC_URL%/images/Dashboard.png" />
+    <meta property="og:image" content="%PUBLIC_URL%/images/FreightFi-Link-Preview.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:alt" content="FreightFi Dashboard - Financial Overview" />
@@ -24,7 +24,7 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="FreightFi - Close your books fast, Get paid even faster" />
     <meta name="twitter:description" content="FreightFi automates the entire financial loop in logistics helping fleets and brokers accelerate cash flow, recover loss revenue, and unlock capital when they need it most." />
-    <meta name="twitter:image" content="%PUBLIC_URL%/images/Dashboard.png" />
+    <meta name="twitter:image" content="%PUBLIC_URL%/images/FreightFi-Link-Preview.png" />
     <meta name="twitter:image:alt" content="FreightFi Dashboard - Financial Overview" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
